objects/AgileVizArt__Story_Comment__c.object
<CustomObject>
    <description>Used to track comments on user stories</description>
    <fields>
        <fullName>AgileVizArt__Comment_With_HTML__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Comment_by__c</fullName>
        <formula>IF(AgileVizArt__Insert_by_Email__c,  AgileVizArt__Email_Adresse__c,
LastModifiedBy.FirstName &amp; &quot; &quot; &amp;  LastModifiedBy.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comment by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Email_Adresse__c</fullName>
        <description>Hier stores the email address of email sender, if the comment is created by email.</description>
        <label>Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Insert_by_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Parent__c</fullName>
        <inlineHelpText>Select story or task this comment is related to</inlineHelpText>
        <label>Parent</label>
        <referenceTo>AgileVizArt__User_Story__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Discussion</fullName>
                </value>
                <value>
                    <fullName>Resolution</fullName>
                </value>
                <value>
                    <fullName>Historical Description</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id,IMAGE(&quot;/img/icon/tasks16.gif&quot;,&quot;View&quot;),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Comment</label>
    <nameField>
        <displayFormat>STC-{YYYY}-{MM}-{DD}-{0}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>